# openMP

./: .gitignore  CMakeLists.txt  readdata.h  timer.h
SIMD/: zip_zap_SIMD.cpp
openMP_parallel/: openMP_block_task.cpp  openMP_early_stop.cpp
parallel_all_queries/: block_task.cpp  group_parallel.cpp
parallel_each_query/: early_stop.cpp  parallel_intersection.cpp  parallel_sequential.cpp  parallel_sequential_with_serial_search.cpp
serial/: adp_algorithms.cpp  hash_find.cpp  max_successor.cpp  sequential.cpp  simplified_Adp.cpp  svs_algorithms.cpp
