cmake_minimum_required(VERSION 3.21)
project(openMP)

set(CMAKE_CXX_STANDARD 14)
FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

add_executable(simplified_Adp serial/simplified_Adp.cpp)
add_executable(sequential serial/sequential.cpp)
add_executable(max_successor serial/max_successor.cpp)
add_executable(group_parallel parallel_all_queries/group_parallel.cpp)
add_executable(block_task parallel_all_queries/block_task.cpp)
add_executable(early_stop parallel_each_query/early_stop.cpp)
add_executable(parallel_intersection parallel_each_query/parallel_intersection.cpp)
add_executable(openMP_block_task openMP_parallel/openMP_block_task.cpp)
add_executable(openMP_early_stop openMP_parallel/openMP_early_stop.cpp)